--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <p>
             <ol>
               <li>Integrate book circulation system on certain territory</li>
-              <li>Implement easy to use and to understand online book procurement flow</li>
+              <li>Implement easy to use and to understand online book loaning flow</li>
             </ol>
           </p>
         </section>
@@ -102,10 +102,10 @@
             </ol>
           </p>
         </section>
-        <section>
+        <section data-background="img/img2.jpg">
           <h2>Solution</h2>
           <p>
-            <img src="img/logo_eliclib.png" height="400px"/>
+            <img src="img/logo_eliclib.png" height="600px"/>
           </p>
         </section>
         <section>
@@ -126,7 +126,7 @@
               </tr>
               <tr class="fragment">
                 <td><img src="img/gl-book.png" /></td>
-                <td>Procurement</td>
+                <td>Collection Loaning System</td>
               </tr>
               <tr class="fragment">
                 <td><img src="img/gl-star.png" /></td>
@@ -179,11 +179,12 @@
           </p>
         </section>
         <section>
-          <h2>Why distributed system? Why not centralized server?</h2>
+          <h2><span class="fragment">Why distributed system?</span>
+          <span class="fragment">Why not centralized server?</span></h2>
           <p>
             <ul>
-              <li>If centralized and there are connection problems on main server, all application will be inaccesible</li>
-              <li>Easy to scalable on both Intra and Inter-Libraries client and server side</li>
+              <li class="fragment">If centralized and there are connection problems on main server, all application will be inaccesible</li>
+              <li class="fragment">Easy to scalable on both Intra and Inter-Libraries client and server side</li>
             <ul>
           </p>
         </section>
